--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "1.0.0-beta.3",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.501.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@content-collections/core": "^0.8.2",
@@ -30,7 +29,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5",
-    "wrangler": "^4.12.0"
+    "typescript": "^5"
   }
 }
