--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "date-fns": "^4.1.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@content-collections/core": "^0.8.2",
+    "@content-collections/markdown": "^0.1.4",
     "@content-collections/next": "^0.2.6",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
